--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.13",
+    "@types/graphql": "^14.5.0",
     "@types/node": "^16.10.3",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
@@ -21,10 +24,15 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "apollo-server-core": "^3.4.0",
     "apollo-server-express": "^3.3.0",
+    "bcryptjs": "^2.4.3",
+    "class-validator": "^0.13.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.6.1",
     "mongoose": "^6.0.10",
+    "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   }
 }
