--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:prod": "node dist/index.js",
-    "start": "ts-node-dev --respawn --no-notify src/index.ts",
+    "dev": "ts-node-dev --respawn --no-notify src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,22 +15,23 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
-    "@types/node": "^16.10.3",
+    "@types/node": "^16.11.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^8.0.0",
+    "eslint": "^8.0.1",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^9.2.0",
     "apollo-server-core": "^3.4.0",
-    "apollo-server-express": "^3.3.0",
+    "apollo-server-express": "^3.4.0",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.6.1",
-    "mongoose": "^6.0.10",
+    "mongoose": "^6.0.11",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   }
