--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@typegoose/typegoose": "^9.2.0",
+    "@types/jsonwebtoken": "^8.5.5",
     "apollo-server-core": "^3.4.0",
     "apollo-server-express": "^3.4.0",
     "bcryptjs": "^2.4.3",
@@ -31,6 +32,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.6.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
