--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start:prod": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --no-notify src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env NODE_ENV=development ts-node-dev --respawn --no-notify src/index.ts",
+    "test": ""
   },
   "keywords": [],
   "author": "",
@@ -15,10 +15,14 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.11.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.0.1",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   },
