db:setup clears test DB, test runs jest

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start:prod": "node dist/index.js",
     "dev": "cross-env NODE_ENV=development ts-node-dev --respawn --no-notify src/index.ts",
-    "test": ""
+    "db:setup": "cross-env NODE_ENV=test ts-node ./src/test-utils/setup.ts",
+    "test": "npm run db:setup && jest --verbose --runInBand"
   },
   "keywords": [],
   "author": "",
