--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:prod": "node dist/index.js",
     "dev": "cross-env NODE_ENV=development ts-node-dev --respawn --no-notify src/index.ts",
     "db:setup": "cross-env NODE_ENV=test ts-node ./src/test-utils/setup.ts",
-    "test": "npm run db:setup && jest --verbose --runInBand"
+    "test": "npm run db:setup && jest .src/__tests__ --verbose --runInBand"
   },
   "keywords": [],
   "author": "",
