--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/faker": "^5.5.9",
     "@types/graphql": "^14.5.0",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.1",
@@ -22,6 +23,7 @@
     "@typescript-eslint/parser": "^4.33.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.0.1",
+    "faker": "^5.5.3",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8",
