--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start:prod": "node dist/index.js",
-    "dev": "cross-env NODE_ENV=development ts-node-dev --respawn --no-notify src/index.ts",
-    "db:setup": "cross-env NODE_ENV=test ts-node ./src/test-utils/setup.ts",
+    "dev": "cross-env NODE_ENV=DEVELOPMENT ts-node-dev --respawn --no-notify src/index.ts",
+    "db:setup": "cross-env NODE_ENV=TEST ts-node ./src/test-utils/setup.ts",
     "test": "npm run db:setup && jest .src/__tests__ --verbose --runInBand"
   },
   "keywords": [],
