--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start:prod": "node dist/index.js",
-    "dev": "cross-env NODE_ENV=DEVELOPMENT ts-node-dev --respawn --no-notify src/index.ts",
-    "db:setup": "cross-env NODE_ENV=TEST ts-node ./src/test-utils/setup.ts",
-    "test": "npm run db:setup && jest .src/__tests__ --verbose --runInBand"
+    "dev": "cross-env NODE_ENV=dev ts-node-dev --respawn --no-notify src/index.ts",
+    "db:setup": "cross-env NODE_ENV=test ts-node ./src/test-utils/setup.ts",
+    "test": "cross-env NODE_ENV=test npm run db:setup && jest .src/__tests__ --verbose --runInBand"
   },
   "keywords": [],
   "author": "",
