--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@types/faker": "^5.5.9",
     "@types/graphql": "^14.5.0",
     "@types/jest": "^27.0.2",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.11.1",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "cross-env": "^7.0.3",
@@ -31,7 +33,6 @@
   },
   "dependencies": {
     "@typegoose/typegoose": "^9.2.0",
-    "@types/jsonwebtoken": "^8.5.5",
     "apollo-server-core": "^3.4.0",
     "apollo-server-express": "^3.4.0",
     "bcryptjs": "^2.4.3",
@@ -42,6 +43,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "uuid": "^8.3.2"
   }
 }
